--- a/ops/Dockerfile
+++ b/ops/Dockerfile
@@ -3,7 +3,7 @@
 # ============================================
 FROM nginx:alpine
 
-# Install dependencies
+# Install dependencies (curl for service waiting, gettext for envsubst)
 RUN apk add --no-cache \
     gettext \
     curl \
@@ -16,8 +16,8 @@ COPY nginx.conf.template /etc/nginx/nginx.conf.template
 COPY nginx-entrypoint.sh /docker-entrypoint.d/40-custom-template.sh
 RUN chmod +x /docker-entrypoint.d/40-custom-template.sh
 
-# Health check (verify nginx can respond)
+# Health check (curl works better with nginx than wget due to IPv6 handling)
 HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
-    CMD curl -f http://localhost:${NGINX_HTTP_PORT:-8080}/ || exit 1
+    CMD ["/bin/sh", "-c", "curl -f http://localhost:${NGINX_HTTP_PORT:-8080}/ || exit 1"]
 
 EXPOSE 80 443 8080 8443
