feat: remove old OAuth testing script and replace with a new version in scripts directory
docs: add comprehensive README for Fastify TypeScript backend with features, setup, and usage instructions

docs: create detailed logging guide for structured logging with Pino in Fastify

docs: add testing documentation for route testing with Vitest and Fastify

docs: provide a quick start guide for OAuth setup with GitHub and Google

docs: create an extensive OAuth setup guide for local and production environments

docs: summarize OAuth test suite results and mocking strategy for GitHub OAuth flow

chore: add Docker entrypoint scripts for setting permissions and executing commands

chore: implement logging middleware for structured request and response logging

--- a/backend_database/Dockerfile
+++ b/backend_database/Dockerfile
@@ -54,8 +54,8 @@ RUN mkdir -p /app/data && \
 # Copy default avatars
 COPY uploads/avatars/default ./uploads/avatars/default
 
-# Copy entrypoint script
-COPY docker-entrypoint.sh /usr/local/bin/
+# Copy entrypoint script from scripts folder
+COPY scripts/docker-entrypoint.sh /usr/local/bin/
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
 # Set default environment variables
