--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
+    "pino-pretty": "^13.1.2",
     "prettier": "^3.6.2",
     "tsup": "^8.3.5",
     "tsx": "4.20.5",
