feat: set NODE_ENV for development script in package.json

--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsup src/main.ts --format esm --clean --minify",
     "start": "node dist/main.js",
-    "dev": "tsx src/main.ts",
+    "dev": "NODE_ENV=development tsx src/main.ts",
     "clean": "rm -rf dist",
     "test": "vitest run",
     "test:watch": "vitest",
