--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -37,7 +37,7 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY entrypoint.sh /docker-entrypoint.sh
 RUN chmod +x /docker-entrypoint.sh
 
-# Health check (curl works better with nginx than wget due to IPv6 handling)
+# Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:4200/ || exit 1
 
