--- a/ops/Dockerfile
+++ b/ops/Dockerfile
@@ -16,7 +16,7 @@ COPY nginx.conf.template /etc/nginx/nginx.conf.template
 COPY nginx-entrypoint.sh /docker-entrypoint.d/40-custom-template.sh
 RUN chmod +x /docker-entrypoint.d/40-custom-template.sh
 
-# Health check
+# Health check (curl works better with nginx than wget due to IPv6 handling)
 HEALTHCHECK --interval=30s --timeout=3s --start-period=10s --retries=3 \
     CMD ["/bin/sh", "-c", "curl -f http://localhost:${NGINX_HTTP_PORT:-8080}/ || exit 1"]
 
