feat: env for local dev and devcontainers

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,15 @@
 # External access is ONLY through NGINX on the configured NGINX_PORT.
 #
 # =============================================================================
+# ENVIRONMENT FILE USAGE
+# =============================================================================
+# This file (.env.example) contains Docker Compose / Production defaults.
+# Copy it to .env to run the full stack: cp .env.example .env && make
+#
+# For local development or dev containers, see .env.development instead.
+# It has localhost-friendly defaults for running services individually.
+#
+# =============================================================================
 # Global Application Configuration
 # =============================================================================
 APP_NAME=ft_transcendence
@@ -57,6 +66,7 @@ FRONTEND_PORT=4200
 # =============================================================================
 DATABANK_PORT=3000
 DATABANK_HOST=0.0.0.0
+# Database path inside Docker container (for local dev: ./src/database/database.db)
 DATABANK_DATABASE_PATH=/app/data/database.db
 
 # Route prefixes (all API routes are under /api)
@@ -104,6 +114,7 @@ RENDER_FPS=30
 # =============================================================================
 LIVECHAT_PORT=3002
 LIVECHAT_HOST=0.0.0.0
+# Database path inside Docker container (for local dev: ./src/database/database.db)
 LIVECHAT_DATABASE_PATH=/app/data/database.db
 AUTH_SERVICE_URL=http://databank:3000
 
