--- a/backend_database/.devcontainer/devcontainer.json
+++ b/backend_database/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Node.js & TypeScript",
+  "name": "Backend Database (Node.js & TypeScript)",
   "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
   "customizations": {
     "vscode": {
@@ -10,11 +10,9 @@
       ]
     }
   },
-  "forwardPorts": [3000, 3001],
+  "forwardPorts": [3000],
   "postCreateCommand": "apt update && apt install -y sqlite3 libsqlite3-dev && npm install",
   "remoteUser": "root",
-  "mounts": [
-    "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached"
-  ],
+  "mounts": ["source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached"],
   "workspaceFolder": "/workspace"
 }
