feat: devcontainer and env for frontend and gamelogic

--- a/.env.development
+++ b/.env.development
@@ -1,13 +1,18 @@
 # =============================================================================
-# Development Environment Configuration
+# Development Environment Configuration - REFERENCE ONLY
 # =============================================================================
-# This file contains defaults for local development and dev containers.
+# ⚠️ NOTE: This file is kept as a reference of all possible environment variables.
+# Each service now has its own .env.development file with service-specific defaults:
+#   - backend_database/.env.development
+#   - backend_gamelogic/.env.development
+#   - live-chat/.env.development
+#   - frontend/.env.development
+#
 # For Docker Compose production mode, use .env (created from .env.example)
 #
 # Usage:
-# - Dev Container: Automatically loaded by devcontainer.json
-# - Local Dev: Copy to .env.local and customize as needed
-# - Docker Compose: Uses .env (not this file)
+# - Per-Service Dev: Each service loads its own <service>/.env.development
+# - Docker Compose: Uses root .env (not this file)
 # =============================================================================
 
 # =============================================================================
