--- a/backend_gamelogic/.devcontainer/devcontainer.json
+++ b/backend_gamelogic/.devcontainer/devcontainer.json
@@ -1,17 +1,16 @@
 {
-  "name": "Live Chat (Node.js & TypeScript)",
+  "name": "Backend Game Logic (Node.js & TypeScript)",
   "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
   "customizations": {
     "vscode": {
       "extensions": [
         "ms-vscode.vscode-typescript-next",
-        "bradlc.vscode-tailwindcss",
         "esbenp.prettier-vscode"
       ]
     }
   },
-  "forwardPorts": [3002],
-  "postCreateCommand": "apt update && npm install",
+  "forwardPorts": [3001],
+  "postCreateCommand": "npm install",
   "remoteUser": "root",
   "mounts": [
     "source=${localWorkspaceFolder},target=/workspace,type=bind,consistency=cached"
