Add dotenv-cli for environment variable management and refactor config validation

--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsup src/main.ts --format esm --clean --minify",
     "start": "node dist/main.js",
-    "dev": "../scripts/load-env.sh .env.development tsx src/main.ts",
+    "dev": "dotenv -e .env.development -- tsx src/main.ts",
     "clean": "rm -rf dist",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -36,6 +36,7 @@
     "@types/sqlite3": "3.1.11",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
