--- a/live-chat/package.json
+++ b/live-chat/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "../scripts/load-env.sh .env.development tsx watch src/main.ts",
+    "dev": "dotenv -e .env.development -- tsx watch src/main.ts",
     "build": "tsc",
     "start": "node dist/main.js",
     "test": "vitest",
@@ -30,6 +30,7 @@
     "@types/sqlite3": "^3.1.11",
     "@types/ws": "^8.18.1",
     "@vitest/coverage-v8": "^3.2.4",
+    "dotenv-cli": "^11.0.0",
     "tsx": "^4.20.5",
     "typescript": "^5.4.2",
     "vitest": "^3.2.4"
