--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -37,51 +37,32 @@ jobs:
           # Check if all containers are running
           docker compose ps
 
-          # Wait for nginx to be ready
-          echo "Checking nginx gateway..."
-          timeout=60
+          # Wait for nginx gateway to be ready
+          # Nginx has built-in health checks and waits for all backend services
+          # before starting, so if nginx responds, all backends are ready
+          echo "Waiting for nginx gateway and all backend services..."
+          timeout=90
           while [ $timeout -gt 0 ]; do
             # Check if we can reach the frontend through nginx
             # -k: accept self-signed cert, -s: silent, -f: fail on error, -I: HEAD request only
             if curl -k -s -f -I https://$NGINX_HOST:$NGINX_HTTPS_PORT > /dev/null 2>&1; then
-              echo "✓ Nginx gateway is ready!"
+              echo "✓ Nginx gateway is ready (all backend services verified by nginx)"
               break
             fi
-            echo "Waiting for nginx... ($timeout seconds left)"
+            echo "Waiting for services... ($timeout seconds left)"
             sleep 5
             timeout=$((timeout - 5))
           done
 
           if [ $timeout -eq 0 ]; then
-            echo "ERROR: Nginx failed to start within timeout"
+            echo "ERROR: Services failed to start within timeout"
             echo "Final container status:"
             docker compose ps -a
             echo ""
-            echo "Service logs:"
+            echo "Nginx logs:"
             docker compose logs nginx
-            exit 1
-          fi
-
-          # Wait for backend database service to be ready
-          echo "Checking backend database service..."
-          timeout=90
-          while [ $timeout -gt 0 ]; do
-            # Check if backend API is responding by checking health from inside the container
-            if docker compose exec -T databank curl -f -s http://localhost:3000/health > /dev/null 2>&1; then
-              echo "✓ Backend database service is ready!"
-              break
-            fi
-            echo "Waiting for backend database... ($timeout seconds left)"
-            sleep 5
-            timeout=$((timeout - 5))
-          done
-
-          if [ $timeout -eq 0 ]; then
-            echo "ERROR: Backend database failed to start within timeout"
-            echo "Final container status:"
-            docker compose ps -a
             echo ""
-            echo "Backend logs:"
+            echo "Database logs:"
             docker compose logs databank
             exit 1
           fi
