fix: ignore database files in Docker build to prevent container crashes

--- a/backend_database/.dockerignore
+++ b/backend_database/.dockerignore
@@ -32,14 +32,13 @@ coverage/
 *.md
 !README.md
 
-# Test database
-database/
-*.db
-*.db-journal
-
 # Uploaded files during development (will be mounted)
 uploads/avatars/*
 !uploads/avatars/default/
+
+# Database files (will be created at runtime or mounted)
+database/*.db
+database/*.db-*
 
 # CI/CD
 .github/
