--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsup src/main.ts --format esm --clean --minify",
-    "start": "node dist/main.js",
+    "build": "echo 'Using tsx - no build needed'",
+    "start": "tsx src/main.ts",
     "dev": "NODE_ENV=development tsx src/main.ts",
     "clean": "rm -rf dist",
     "test": "vitest run",
