Refactor API URLs and update dependencies across environment files and configurations

--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -7,7 +7,7 @@ NODE_ENV=development
 
 # API URLs (injected into index.html at build time via entrypoint.sh)
 # For local dev without NGINX proxy, services run on localhost
-PUBLIC_API_URL=http://localhost:3000/api
+PUBLIC_API_URL=http://localhost:3000
 PUBLIC_WS_URL=ws://localhost:3002/ws
 
 # Logging (for build tools)
