--- a/.env.development
+++ b/.env.development
@@ -90,7 +90,7 @@ AUTH_SERVICE_URL=http://localhost:3000
 # =============================================================================
 FRONTEND_PORT=4200
 # For local dev: services run on localhost
-PUBLIC_API_URL=http://localhost:3000/api
+PUBLIC_API_URL=http://localhost:3000
 PUBLIC_WS_URL=ws://localhost:3001/ws
 
 # =============================================================================
