--- a/.env.example
+++ b/.env.example
@@ -52,7 +52,7 @@ NGINX_HOST=localhost
 
 # Public URLs (what the browser uses to connect)
 # These should match your NGINX_HTTPS_PORT
-PUBLIC_API_URL=https://localhost:8443/api
+PUBLIC_API_URL=https://localhost:8443
 PUBLIC_WS_URL=wss://localhost:8443/ws
 
 # =============================================================================
