--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
     env_file:
       - .env
     environment:
-      PUBLIC_API_URL: ${PUBLIC_API_URL:-https://localhost:8443/api}
+      PUBLIC_API_URL: ${PUBLIC_API_URL:-https://localhost:8443}
       PUBLIC_WS_URL: ${PUBLIC_WS_URL:-wss://localhost:8443/ws}
     restart: unless-stopped
     networks:
