--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,5 +20,8 @@
     "typescript": "^5.9.2"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "prettier": "^3.6.2"
+  }
 }
