--- a/ops/nginx.conf.template
+++ b/ops/nginx.conf.template
@@ -14,6 +14,15 @@ server {
     ssl_certificate_key /etc/nginx/certs/key.pem;
     ssl_protocols       TLSv1.2 TLSv1.3;
 
+    # Static file uploads (avatars, etc.)
+    location /uploads/ {
+        proxy_pass http://databank:${DATABANK_PORT}/uploads/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location / {
         proxy_pass http://frontend:${FRONTEND_PORT};
         proxy_set_header Host $host;
@@ -36,7 +45,7 @@ server {
             return 204;
         }
 
-        proxy_pass http://databank:${DATABANK_PORT}/api/;
+        proxy_pass http://databank:${DATABANK_PORT};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
