Refactor code to replace username with user_Id in match requests routes

--- a/backend_database/.env.development
+++ b/backend_database/.env.development
@@ -10,7 +10,7 @@ PUBLIC_PORT=
 PUBLIC_PROTOCOL=http
 
 # Database
-DATABASE_PATH=./src/database/database.db
+DATABASE_PATH=./database/database.db
 
 # Logging
 LOG_LEVEL=debug
