--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,6 +14,6 @@
     "declarationMap": true,
     "sourceMap": true
   },
-  "include": ["src/ts/**/*", "../backend_gamelogic/src/Tournament.ts"],
+  "include": ["src/ts/**/*"],
   "exclude": ["node_modules", "src/js"]
 }
