--- a/ops/nginx.conf.template
+++ b/ops/nginx.conf.template
@@ -120,6 +120,15 @@ server {
         proxy_pass http://backend:${GAMELOGIC_PORT}/;
     }
 
+    # Live chat HTTP routes
+    location /lobby/ {
+        proxy_pass http://live-chat:${LIVECHAT_PORT}/lobby/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # WebSocket routes
     location /ws/game {
         proxy_pass http://backend:${GAMELOGIC_PORT}/game;
