--- a/ops/nginx.conf.template
+++ b/ops/nginx.conf.template
@@ -116,6 +116,15 @@ server {
         add_header 'Access-Control-Allow-Credentials' 'true' always;
     }
 
+    # OpenAPI specification endpoint (for type generation)
+    location = /openapi.json {
+        proxy_pass http://databank:${DATABANK_PORT}/openapi.json;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     location /game/ {
         proxy_pass http://backend:${GAMELOGIC_PORT}/;
     }
