feat: implement service-to-service authentication for gamelogic routes

--- a/.env.example
+++ b/.env.example
@@ -129,3 +129,6 @@ LOG_LEVEL=info
 TLS_CERT_PATH=./.certs/cert.pem
 TLS_KEY_PATH=./.certs/key.pem
 TLS_CA_PATH=./.certs/rootCA.pem
+
+# Service-to-service authentication (gamelogic <-> databank)
+SERVICE_SECRET=your-64-char-hex-secret-here-generate-with-openssl-rand-hex-32
