feat: basic elk stack

--- a/.env.development
+++ b/.env.development
@@ -99,6 +99,20 @@ PUBLIC_WS_URL=ws://localhost:3001/ws
 LOG_LEVEL=debug
 
 # =============================================================================
+# ELK Stack - Log Management (Optional)
+# =============================================================================
+
+ELK_SECURITY_ENABLED=false
+ELASTICSEARCH_PORT=9200
+ELASTIC_USERNAME=elastic
+ELASTIC_PASSWORD=changeme
+LOGSTASH_PORT=5044
+LOGSTASH_TCP_PORT=5000
+LOGSTASH_UDP_PORT=5000
+KIBANA_PORT=5601
+KIBANA_PUBLIC_URL=http://localhost:5601
+
+# =============================================================================
 # TLS/SSL Configuration (not used in local dev)
 # =============================================================================
 TLS_CERT_PATH=./.certs/cert.pem
