--- a/.env.example
+++ b/.env.example
@@ -124,6 +124,26 @@ AUTH_SERVICE_URL=http://databank:3000
 LOG_LEVEL=info
 
 # =============================================================================
+# ELK Stack - Log Management (Optional)
+# =============================================================================
+# Enable security features (basic auth) for production
+ELK_SECURITY_ENABLED=false
+
+# Elasticsearch
+ELASTICSEARCH_PORT=9200
+ELASTIC_USERNAME=elastic
+ELASTIC_PASSWORD=changeme
+
+# Logstash
+LOGSTASH_PORT=5044
+LOGSTASH_TCP_PORT=5000
+LOGSTASH_UDP_PORT=5000
+
+# Kibana
+KIBANA_PORT=5601
+KIBANA_PUBLIC_URL=http://localhost:5601
+
+# =============================================================================
 # TLS/SSL Configuration
 # =============================================================================
 TLS_CERT_PATH=./.certs/cert.pem
