feat: basic prometheus+grafana setup

--- a/.env.example
+++ b/.env.example
@@ -132,3 +132,21 @@ TLS_CA_PATH=./.certs/rootCA.pem
 
 # Service-to-service authentication (gamelogic <-> databank)
 SERVICE_SECRET=your-64-char-hex-secret-here-generate-with-openssl-rand-hex-32
+
+# =============================================================================
+# Monitoring Stack (Prometheus & Grafana)
+# =============================================================================
+# Prometheus - metrics collection
+PROMETHEUS_PORT=9090
+
+# Grafana - visualization dashboards
+GRAFANA_PORT=3001
+GRAFANA_ADMIN_USER=admin
+GRAFANA_ADMIN_PASSWORD=admin
+GRAFANA_ROOT_URL=http://localhost:3001
+
+# Node Exporter - system metrics
+NODE_EXPORTER_PORT=9100
+
+# cAdvisor - container metrics  
+CADVISOR_PORT=8080
