--- a/backend_database/package.json
+++ b/backend_database/package.json
@@ -62,6 +62,7 @@
     "fastify": "5.6.0",
     "fastify-plugin": "^5.0.1",
     "jose": "^6.1.0",
+    "prom-client": "^15.1.3",
     "qrcode": "^1.5.4",
     "speakeasy": "^2.0.0",
     "sqlite3": "5.1.7",
