--- a/backend_gamelogic/package.json
+++ b/backend_gamelogic/package.json
@@ -20,7 +20,8 @@
     "@fastify/static": "^8.2.0",
     "@fastify/websocket": "^11.2.0",
     "fastify": "5.6.0",
-    "fastify-plugin": "^5.0.1"
+    "fastify-plugin": "^5.0.1",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
