--- a/live-chat/package.json
+++ b/live-chat/package.json
@@ -23,6 +23,7 @@
     "ajv-formats": "^3.0.1",
     "fastify": "^5.6.0",
     "fastify-plugin": "^5.0.1",
+    "prom-client": "^15.1.3",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
