--- a/grafana/provisioning/dashboards/dashboards.yml
+++ b/grafana/provisioning/dashboards/dashboards.yml
@@ -1,9 +1,9 @@
 apiVersion: 1
 
 providers:
-  - name: 'Transcendence Dashboards'
+  - name: "Transcendence Dashboards"
     orgId: 1
-    folder: ''
+    folder: ""
     type: file
     disableDeletion: false
     updateIntervalSeconds: 10
