--- a/grafana/provisioning/datasources/prometheus.yml
+++ b/grafana/provisioning/datasources/prometheus.yml
@@ -9,6 +9,6 @@ datasources:
     isDefault: true
     editable: false
     jsonData:
-      timeInterval: '15s'
-      queryTimeout: '60s'
-      httpMethod: 'POST'
+      timeInterval: "15s"
+      queryTimeout: "60s"
+      httpMethod: "POST"
