comment cleanup and removal of OAUTH

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,6 @@
 #              ├─ /         --> frontend:4200
 #              ├─ /api/     --> databank:3000
 #              ├─ /auth/    --> databank:3000
-#              ├─ /oauth/   --> databank:3000
 #              ├─ /game/    --> backend:3001
 #              └─ /ws/game  --> backend:3001 (WebSocket)
 #
@@ -32,7 +31,7 @@ NODE_ENV=production
 # =============================================================================
 # Public-Facing URL Configuration
 # =============================================================================
-# These are used for OAuth callbacks, CORS origins, and WebSocket URLs
+# These are used for CORS origins and WebSocket URLs
 # For local development with NGINX proxy:
 PUBLIC_HOST=localhost
 PUBLIC_PORT=8443
@@ -71,7 +70,6 @@ DATABANK_DATABASE_PATH=/app/data/database.db
 
 # Route prefixes (all API routes are under /api)
 AUTH_PREFIX=/api/auth
-OAUTH_PREFIX=/api/oauth
 API_PREFIX=/api
 
 # JWT Configuration
@@ -81,17 +79,6 @@ JWT_ACCESS_SECRET=dev-access-secret-change-me
 JWT_REFRESH_SECRET=dev-refresh-secret-change-me
 JWT_ACCESS_TTL=15m
 JWT_REFRESH_TTL=7d
-
-# OAuth Configuration
-OAUTH_STATE_SECRET=dev-oauth-state-secret-change-me
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
-# Leave empty to auto-generate based on PUBLIC_HOST/PUBLIC_PORT/PUBLIC_PROTOCOL
-GITHUB_REDIRECT_URI=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-# Leave empty to auto-generate based on PUBLIC_HOST/PUBLIC_PORT/PUBLIC_PROTOCOL
-GOOGLE_REDIRECT_URI=
 
 # =============================================================================
 # Game Logic Service (backend)
