feat: add service authentication secret and corresponding tests

--- a/backend_database/.env.development
+++ b/backend_database/.env.development
@@ -29,3 +29,6 @@ JWT_ACCESS_SECRET=dev-access-secret-change-me
 JWT_REFRESH_SECRET=dev-refresh-secret-change-me
 JWT_ACCESS_TTL=15m
 JWT_REFRESH_TTL=7d
+
+# Service-to-service authentication (gamelogic <-> databank)
+SERVICE_SECRET=dev-service-secret-change-me
