fix: building all sevices for integration test

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build and start services
         run: |
-          docker compose up -d --build
+          docker compose -f docker-compose.yml -f docker-compose.elk.yml -f docker-compose.prometheus.yml up -d --build
 
       - name: Wait for services to be ready
         run: |
