--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -27,6 +27,28 @@ jobs:
 
       - name: Build and start services
         run: |
+          # Start ELK stack first (especially logstash for syslog logging)
+          echo "Starting ELK stack first..."
+          docker compose -f docker-compose.yml -f docker-compose.elk.yml -f docker-compose.prometheus.yml up -d --build elasticsearch logstash
+
+          # Wait for logstash to be ready
+          echo "Waiting for logstash to be ready..."
+          timeout=60
+          while [ $timeout -gt 0 ]; do
+            if docker compose -f docker-compose.yml -f docker-compose.elk.yml -f docker-compose.prometheus.yml ps logstash | grep -q "Up"; then
+              echo "✓ Logstash is ready"
+              break
+            fi
+            echo "Waiting for logstash... ($timeout seconds left)"
+            sleep 2
+            timeout=$((timeout - 2))
+          done
+
+          # Give DNS a moment to propagate
+          sleep 3
+
+          # Now start all remaining services
+          echo "Starting remaining services..."
           docker compose -f docker-compose.yml -f docker-compose.elk.yml -f docker-compose.prometheus.yml up -d --build
 
       - name: Wait for services to be ready
