fix: single compose file to match eval sheet

--- a/.env.example
+++ b/.env.example
@@ -110,6 +110,9 @@ AUTH_SERVICE_URL=http://databank:3000
 # =============================================================================
 LOG_LEVEL=info
 
+LOGGING_DRIVER=syslog
+SYSLOG_ADDRESS=tcp://127.0.0.1:5000
+
 # =============================================================================
 # ELK Stack - Log Management (Optional)
 # =============================================================================
@@ -155,5 +158,5 @@ GRAFANA_ROOT_URL=http://localhost:3001
 # Node Exporter - system metrics
 NODE_EXPORTER_PORT=9101
 
-# cAdvisor - container metrics  
+# cAdvisor - container metrics
 CADVISOR_PORT=8080
